Refactor Schedule mapping and resolution for improved data handling